webpage first draft

--- a/index.html
+++ b/index.html
@@ -7,6 +7,59 @@
     <title>Document</title>
 </head>
 <body>
-    <div>this is a test</div>
+    <!-- hero section -->
+    <div class="hero">
+        <div class="header">
+            <span class="header-logo">Header Logo</span>
+            <a class="link" href="">link-1</a>
+            <a class="link" href="">link-2</a>
+            <a class="link" href="">link-3</a>
+        </div>
+        <div class="hero-main">
+            <div class="hero-text">
+                <p class="hero-main-text">This website is Awesome</p>
+                <p class="hero-sub-text">This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast</p>
+                <button class="button-common">Sign Up</button>
+            </div>
+            <div class="hero-image" >
+                <img src="images/hero.jpg" width="320px" height="auto">
+            </div>
+        </div>
+    </div>
+    <!-- information section -->
+    <div class="information">
+        <div class="info-title">Some random information</div>
+        <div class="infos">
+            <div class="info-piece">
+                <img src="images/1.jpg">
+                <p>this is some subcontext under an illustration</p>
+            </div>
+            <div class="info-piece">
+                <img src="images/2.jpg">
+                <p>this is some subcontext under an illustration</p>
+            </div>
+            <div class="info-piece">
+                <img src="images/3.jpg">
+                <p>this is some subcontext under an illustration</p>
+            </div>
+            <div class="info-piece">
+                <img src="images/4.jpg">
+                <p>this is some subcontext under an illustration</p>
+            </div>
+        </div>
+    </div>
+    <!-- quote section -->
+    <div class="quote">
+        <p class="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi omnis ipsam assumenda!</p>
+        <p class="quotee">- Jamie Lannister, the Kingslayer</p>
+    </div>
+    <!-- footer section -->
+    <div class="footer">
+        <div class="footer-text">
+            <p class="header">Call to action! It's time!</p>
+            <p class="subheader">Sign up for our product by clicking the button right over there!</p>
+        </div>
+        <button class="footer-button button-common">Sign up</button>
+    </div>
 </body>
 </html>
